--- a/style.css
+++ b/style.css
@@ -11,3 +11,9 @@ p{font-size: 20px;}
 
 font-family: cursive;
 
+header{
+   border: 2px solid rgb(42, 122, 228);
+   padding: 20px;
+   font-size: 32px;
+   color: rgb(42, 122, 228);
+}
