--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ font-family: cursive;
 
 header{
    border: 2px solid rgb(42, 122, 228);
-   padding: 20px;
+   margin:  20px;
    font-size: 32px;
    color: rgb(42, 122, 228);
 } 
