--- a/style.css
+++ b/style.css
@@ -7,9 +7,11 @@ h1{font-size: 40px;}
 
 }
 
-p{font-size: 20px;}
+p{
+   font-size: 20px;
 
 font-family: cursive;
+}
 
 header{
    border: 2px solid rgb(42, 122, 228);
