--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ section {
    background-color: rgb(184, 156, 213);
    padding-bottom: 80px;
    padding-top: 80px;
+   display: flex;
+   justify-content: center;
 }
 
 header{
