--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ section {
    display: flex;
    justify-content: center;
 }
+.chamada-texto{
+   margin-right: 5%;
+}
 
 header{
    border: 2px solid rgb(42, 122, 228);
